2024-08-22T01:25:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10500185048 # 395
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-22
* notice: last 14d: unq all: 2 2
* notice: prev accum: outdated-unq outdated-all / unq all: 407 797 / 408 798
* notice: next accum: outdated-unq outdated-all / unq all: 407 797 / 409 799
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-08-21]

2024-08-20T01:23:43Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10463624440 # 393
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-20
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 406 796 / 407 797
* notice: next accum: outdated-unq outdated-all / unq all: 407 797 / 408 798
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2024-06-29] / [2024-08-19]

2024-07-11T01:22:33Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9883915356 # 353
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-07-11
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 405 795 / 407 797
* notice: next accum: outdated-unq outdated-all / unq all: 406 796 / 407 797
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-06-27] / []

2024-07-04T01:20:47Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/9787000286 # 346