@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-08-22T01:25:48Z",
+  "timestamp" : "2024-08-23T01:24:38Z",
   "count_outdated" : 797,
   "uniques_outdated" : 407,
-  "count" : 799,
-  "uniques" : 409,
+  "count" : 800,
+  "uniques" : 410,
   "clones" : [
     {
       "timestamp": "2024-08-19T00:00:00Z",
@@ -16,6 +16,15 @@
     },
     {
       "timestamp": "2024-08-21T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-08-22T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
