@@ -1,3 +1,12 @@
+2024-08-23T01:24:38Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10518251563 # 396
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-23
+* notice: last 14d: unq all: 2 3
+* notice: prev accum: outdated-unq outdated-all / unq all: 407 797 / 409 799
+* notice: next accum: outdated-unq outdated-all / unq all: 407 797 / 410 800
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-08-22]
+
 2024-08-22T01:25:48Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10500185048 # 395
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2024-08-22
